--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -35,3 +35,24 @@
     overflow: hidden;
 
 }
+
+@media screen and (min-width:320px) and (max-width:667px) {
+    .Movie {
+        width: 100%;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:667px) and (orientation: portrait) {
+    .Movie{
+        width:100%;
+        flex-direction: column;
+    }
+    .Movie__Poster{
+        top:0;
+        left:0;
+        width:100%;
+    }
+    .Movie__Column{
+        width:100%!important;
+    }
+}
